@@ -1,15 +1,0 @@
-
-using System;
-
-namespace librarysim
-{
-	
-	
-	public class ChangeLog
-	{
-		
-		public ChangeLog()
-		{
-		}
-	}
-}
